@@ -11,7 +11,7 @@ importFrom("statmod", "gauss.quad.prob", "logmdigamma")
 importFrom("limma", "plotMDS", "squeezeVar")
 
 # Extra imports for voomaLmFitWithImputation
-importFrom("stats", "approxfun", "hat", "lowess", "median", "runif")
+importFrom("stats", "approxfun", "glm.control", "glm.fit", "hat", "lowess", "median", "p.adjust", "runif")
 importFrom("graphics", "title")
 importFrom("limma", "arrayWeights", "asMatrixWeights", "chooseLowessSpan", "duplicateCorrelation",
            "loessFit", "lmFit")
