@@ -41,6 +41,9 @@ dztbinom <- function(x, size, prob, log=FALSE, logit.p=FALSE)
 pztbinom <- function(q, size, prob, lower.tail = TRUE, log.p = FALSE)
 # Cumulative probablities for zero-truncated binomial distribution
 # Created 12 Aug 2023. Last modified 23 Aug 2023.
+#
+# Note that subtractive cancellation can occur, e.g.,
+# pztbinom(1.5,size=100,prob=1e-50) gives 0 instead of 1.
 {
   if(lower.tail) {
     p <- pbinom(q=q,size=size,prob=prob,lower.tail=TRUE,log.p=FALSE)
