@@ -20,7 +20,11 @@ pztbinom(q, size, prob, lower.tail = TRUE, log.p = FALSE)
   \item{log}{logical; if \code{TRUE}, the log-density is returned.}
   \item{logit.p}{logical; if \code{TRUE}, success probabilities \code{prob} are on the logit scale.}
   \item{lower.tail}{logical; if \code{TRUE}, probabilities are P(X<q) otherwise P(X>q).}
-  \item{log.p}{logical; if \code{TRUE}, probabilities are on the log-scale.}
+  \item{log.p}{logical; if \code{TRUE}, tail probabilities are on the log-scale.}
+}
+
+\details{
+\code{dztbinom} and \code{pztbinom} perform similarly to the R stats functions \code{dbinom} and \code{pbinom} except for the zero-truncation.
 }
 
 \value{
@@ -30,10 +34,6 @@ for the zero-truncated binomial distribution with parameters \code{size} and \co
 Output is a vector of length equal to the maximum length of any of the arguments \code{x}, \code{q}, \code{size} or \code{prob}.
 If the first argument is the longest, then all the attributes of the input argument are preserved on output, for example, a matrix \code{x} will give a matrix on output.
 Elements of input vectors that are missing will cause the corresponding elements of the result to be missing, as will non-positive values for \code{size} or negative values for \code{prob}.
-}
-
-\details{
-These functions perform similarly to the R stats functions  \code{dbinom} and \code{pbinom} except for the zero-truncation.
 }
 
 \examples{
